Upgrade HEAD requests and strip HSTS headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=60m
 
 proxy_cache my_cache;
 proxy_cache_background_update on;
+proxy_cache_convert_head on;
 proxy_cache_lock on;
 proxy_cache_methods GET HEAD POST;
 proxy_cache_revalidate on;
@@ -15,6 +16,9 @@ proxy_ignore_headers
 	Cache-Control
 	Set-Cookie
 	Vary;
+
+# HSTS is good, but it really cramps our style (and makes wget sad)
+proxy_set_header Strict-Transport-Security "";
 
 # docker + ipv6 = bad vibes
 resolver 8.8.8.8 8.8.4.4 ipv6=off;
