--- a/http.conf
+++ b/http.conf
@@ -1,7 +1,7 @@
 # https://www.nginx.com/blog/nginx-caching-guide/
 # https://nginx.org/en/docs/http/ngx_http_proxy_module.html
 
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=60m use_temp_path=off;
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=60m max_size=800m use_temp_path=off;
 
 proxy_cache my_cache;
 proxy_cache_background_update on;
