Add a few more header tweaks (ignore "Expires" and overwrite "Pragma"

--- a/http.conf
+++ b/http.conf
@@ -14,8 +14,11 @@ proxy_cache_valid 60m;
 
 proxy_ignore_headers
 	Cache-Control
+	Expires
 	Set-Cookie
 	Vary;
+# "Pragma" ends up with things like "no-cache" in it, which also cramps our style
+proxy_set_header Pragma "";
 
 # HSTS is good, but it really cramps our style (and makes wget sad)
 proxy_set_header Strict-Transport-Security "";
