Listen on 11371 as well for HKP

--- a/http.conf
+++ b/http.conf
@@ -28,9 +28,10 @@ resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
 server {
 	listen 80;
+	listen 11371;
 
 	location / {
-		proxy_pass $scheme://$host;
+		proxy_pass $scheme://$host:$server_port;
 		proxy_set_header Host $http_host;
 
 		add_header X-Cache-Status $upstream_cache_status;
