Update the logging format to note whether each request is a cache HIT or MISS

--- a/http.conf
+++ b/http.conf
@@ -18,17 +18,26 @@ proxy_ignore_headers
 	Set-Cookie
 	Vary;
 # "Pragma" ends up with things like "no-cache" in it, which also cramps our style
-proxy_set_header Pragma "";
+proxy_set_header Pragma '';
 
 # HSTS is good, but it really cramps our style (and makes wget sad)
-proxy_set_header Strict-Transport-Security "";
+proxy_set_header Strict-Transport-Security '';
 
 # docker + ipv6 = bad vibes
 resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
+log_format cached
+	'$upstream_cache_status '
+	'$remote_addr - $remote_user [$time_local] "$request" '
+	'$status $body_bytes_sent "$http_referer" '
+	'"$http_user_agent" "$http_x_forwarded_for"';
+access_log off; # turned back on in the "server" block below
+
 server {
 	listen 80;
 	listen 11371;
+
+	access_log /dev/stdout cached;
 
 	location / {
 		proxy_pass $scheme://$host:$server_port;
