--- a/http.conf
+++ b/http.conf
@@ -27,9 +27,9 @@ proxy_set_header Strict-Transport-Security '';
 resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
 log_format cached
-	'$upstream_cache_status '
-	'$remote_addr - $remote_user [$time_local] "$request" '
-	'$status $body_bytes_sent "$http_referer" '
+	'$upstream_cache_status "$scheme://$host:$server_port$request_uri" '
+	'$remote_addr [$time_local] "$request" '
+	'$status $body_bytes_sent '
 	'"$http_user_agent" "$http_x_forwarded_for"';
 access_log off; # turned back on in the "server" block below
 
