Adjust log lines for consistency and focusing on the relevant info for our use

--- a/http.conf
+++ b/http.conf
@@ -27,17 +27,16 @@ proxy_set_header Strict-Transport-Security '';
 resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
 log_format cached
-	'$upstream_cache_status "$scheme://$host:$server_port$request_uri" '
-	'$remote_addr [$time_local] "$request" '
-	'$status $body_bytes_sent '
-	'"$http_user_agent" "$http_x_forwarded_for"';
+	'$upstream_cache_status $status $request_method "$scheme://$host:$server_port$request_uri" $server_protocol '
+	'[$time_local] $remote_addr '
+	'"$http_user_agent"';
 access_log off; # turned back on in the "server" block below
 
 server {
 	listen 80;
 	listen 11371;
 
-	access_log /dev/stdout cached;
+	access_log /var/log/nginx/access.log cached;
 
 	location / {
 		proxy_pass $scheme://$host:$server_port;
