--- a/stream.conf
+++ b/stream.conf
@@ -4,13 +4,16 @@ stream {
 	# docker + ipv6 = bad vibes
 	resolver 8.8.8.8 8.8.4.4 ipv6=off;
 
-	log_format log_stream '$remote_addr [$time_local] $protocol [$ssl_preread_server_name] $status $bytes_sent $bytes_received $session_time';
+	log_format ssl
+		'TLS $status $protocol $ssl_preread_server_name:$server_port '
+		'[$time_local] $remote_addr '
+		'-- $bytes_sent $bytes_received $session_time';
 
-	access_log /var/log/nginx/access.log log_stream;
+	access_log /var/log/nginx/access.log ssl;
 	error_log  /var/log/nginx/error.log;
 
 	server {
 		listen 443;
-		proxy_pass $ssl_preread_server_name:443;
+		proxy_pass $ssl_preread_server_name:$server_port;
 	}
 }
