--- a/http.conf
+++ b/http.conf
@@ -7,7 +7,7 @@ proxy_cache my_cache;
 proxy_cache_background_update on;
 proxy_cache_convert_head on;
 proxy_cache_lock on;
-proxy_cache_methods GET HEAD POST;
+proxy_cache_methods GET HEAD;
 proxy_cache_revalidate on;
 proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
 proxy_cache_valid 60m;
