Prevent Squignix from proxying traffic for itself
Fixes #1

--- a/http.conf
+++ b/http.conf
@@ -39,8 +39,14 @@ server {
 	access_log /var/log/nginx/access.log cached;
 
 	location / {
+		if ($http_x_squignix) {
+			# prevent infinite recursion
+			return 429 'Squignix Redirecting To Itself\n';
+		}
+
 		proxy_pass $scheme://$host:$server_port;
 		proxy_set_header Host $http_host;
+		proxy_set_header X-Squignix true;
 
 		add_header X-Cache-Status $upstream_cache_status;
 	}
