Add "nginx-debug -t" to verify the configuration during image build

--- a/http.conf
+++ b/http.conf
@@ -30,7 +30,7 @@ log_format cached
 	'$upstream_cache_status $status $request_method "$scheme://$host:$server_port$request_uri" $server_protocol '
 	'[$time_local] $remote_addr '
 	'"$http_user_agent"';
-access_log off; # turned back on in the "server" block below
+access_log off; # turned back on in the "server" blocks (to avoid overlapping logging settings)
 
 server {
 	listen 80;
