Adjust configuration to use more workers and share the load

--- a/http.conf
+++ b/http.conf
@@ -33,8 +33,8 @@ log_format cached
 access_log off; # turned back on in the "server" blocks (to avoid overlapping logging settings)
 
 server {
-	listen 80;
-	listen 11371;
+	listen 80 reuseport;
+	listen 11371 reuseport;
 
 	access_log /var/log/nginx/access.log cached;
 
