--- a/stream.conf
+++ b/stream.conf
@@ -13,7 +13,7 @@ stream {
 	error_log  /var/log/nginx/error.log;
 
 	server {
-		listen 443;
+		listen 443 reuseport;
 		proxy_pass $ssl_preread_server_name:$server_port;
 	}
 }
