Add health check location

--- a/http.conf
+++ b/http.conf
@@ -38,6 +38,11 @@ server {
 
 	access_log /var/log/nginx/access.log cached;
 
+	location /__squignix_health__ {
+		return 200 "vigorous\n";
+		add_header Content-Type text/plain;
+	}
+
 	location / {
 		if ($http_x_squignix) {
 			# prevent infinite recursion
