--- a/http.conf
+++ b/http.conf
@@ -1,7 +1,7 @@
 # https://www.nginx.com/blog/nginx-caching-guide/
 # https://nginx.org/en/docs/http/ngx_http_proxy_module.html
 
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=60m max_size=800m use_temp_path=off;
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=365d max_size=800m use_temp_path=off;
 
 proxy_cache my_cache;
 proxy_cache_background_update on;
@@ -33,10 +33,16 @@ log_format cached
 access_log off; # turned back on in the "server" blocks (to avoid overlapping logging settings)
 
 server {
-	listen 80 reuseport;
-	listen 11371 reuseport;
+	listen 80 default_server;
+	listen 11371 default_server;
+	server_name _;
 
 	access_log /var/log/nginx/access.log cached;
+
+	if ($http_x_squignix) {
+		# prevent infinite recursion
+		return 429 'Squignix Redirecting To Itself\n';
+	}
 
 	location /__squignix_health__ {
 		return 200 "vigorous\n";
@@ -44,14 +50,51 @@ server {
 	}
 
 	location / {
-		if ($http_x_squignix) {
-			# prevent infinite recursion
-			return 429 'Squignix Redirecting To Itself\n';
-		}
-
 		proxy_pass $scheme://$host:$server_port;
 		proxy_set_header Host $http_host;
 		proxy_set_header X-Squignix true;
+
+		add_header X-Cache-Status $upstream_cache_status;
+	}
+}
+
+# sometimes snapshot.debian.org ends up 404ing but only for certain servers :(
+# (https://bugs.debian.org/941903)
+# so if we have an upstream with it listed more than once, we can auto-retry on 404
+upstream debian_snapshot {
+	server snapshot.debian.org:80;
+	server snapshot.debian.org:80 backup;
+}
+# (listed twice because it has two A records as of 2019-10-14)
+
+server {
+	listen 80;
+	listen 11371;
+	server_name snapshot.debian.org;
+
+	access_log /var/log/nginx/access.log cached;
+
+	if ($http_x_squignix) {
+		# prevent infinite recursion
+		return 429 'Squignix Redirecting To Itself\n';
+	}
+
+	location ~ ^/archive/[^/]+/\d\d\d\d\d\d\d\dT\d\d\d\d\d\dZ/ {
+		proxy_cache_valid 365d;
+
+		proxy_pass http://debian_snapshot;
+		proxy_set_header Host $http_host;
+		proxy_set_header X-Squignix true;
+		proxy_next_upstream error timeout http_403 http_404 http_429 http_500 http_502 http_503 http_504;
+
+		add_header X-Cache-Status $upstream_cache_status;
+	}
+
+	location / {
+		proxy_pass http://debian_snapshot;
+		proxy_set_header Host $http_host;
+		proxy_set_header X-Squignix true;
+		proxy_next_upstream error timeout http_403 http_404 http_429 http_500 http_502 http_503 http_504;
 
 		add_header X-Cache-Status $upstream_cache_status;
 	}
