Shrink cache TTL of Debian's "Release" and "Packages" files to avoid Hash Sum Mismatch issues more vigorously (and never serve stale copies of them)

--- a/http.conf
+++ b/http.conf
@@ -45,8 +45,20 @@ server {
 	}
 
 	location /__squignix_health__ {
-		return 200 "vigorous\n";
 		add_header Content-Type text/plain;
+		return 200 "vigorous\n";
+	}
+
+	# don't cache Debian "Release" and "Packages" files for too long (hash sum mismatch); regexes adapted from squid-deb-proxy <3
+	location ~ \/((Packages|Sources)(\.bz2|\.gz|\.xz)?|Release(\.gpg)?|InRelease|(Translation-.*)(\.bz2|\.gz|\.xz)?)$ {
+		proxy_cache_use_stale off;
+		proxy_cache_valid 5m;
+
+		proxy_pass $scheme://$host:$server_port;
+		proxy_set_header Host $http_host;
+		proxy_set_header X-Squignix true;
+
+		add_header X-Cache-Status $upstream_cache_status;
 	}
 
 	location / {
