--- a/http.conf
+++ b/http.conf
@@ -1,7 +1,8 @@
 # https://www.nginx.com/blog/nginx-caching-guide/
 # https://nginx.org/en/docs/http/ngx_http_proxy_module.html
 
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m inactive=365d max_size=800m use_temp_path=off;
+# this file includes "proxy_cache_path" with some potentially environment-supplied values
+include /etc/nginx/conf.d/squignix-generated.include;
 
 proxy_cache my_cache;
 proxy_cache_background_update on;
@@ -111,3 +112,5 @@ server {
 		add_header X-Cache-Status $upstream_cache_status;
 	}
 }
+
+# vim:set ft=nginx:
