Add "keepalive_timeout" to avoid connection errors with 200+ cache hits all at once (large "apt-get install" for a lot of fully-cached deb files)

--- a/http.conf
+++ b/http.conf
@@ -37,6 +37,9 @@ server {
 	listen 11371 default_server;
 	server_name _;
 
+	# avoid "Error reading from server - read (104: Connection reset by peer)" when returning *many* cache hits concurrently
+	keepalive_timeout 0;
+
 	access_log /var/log/nginx/access.log cached;
 
 	if ($http_x_squignix) {
@@ -83,6 +86,9 @@ server {
 	listen 80;
 	listen 11371;
 	server_name snapshot.debian.org;
+
+	# avoid "Error reading from server - read (104: Connection reset by peer)" when returning *many* cache hits concurrently
+	keepalive_timeout 0;
 
 	access_log /var/log/nginx/access.log cached;
 
