Actively prefer "snapshot-mlm-01.debian.org" for now
See https://bugs.debian.org/1072675#15

--- a/http.conf
+++ b/http.conf
@@ -77,10 +77,11 @@ server {
 # (https://bugs.debian.org/941903)
 # so if we have an upstream with it listed more than once, we can auto-retry on 404
 upstream debian_snapshot {
-	server snapshot.debian.org:80;
+	server snapshot-mlm-01.debian.org:80; # TODO https://bugs.debian.org/1072675#15 (drop the first "backup" below)
+	# (listed twice because it has two A records as of 2019-10-14)
+	server snapshot.debian.org:80 backup;
 	server snapshot.debian.org:80 backup;
 }
-# (listed twice because it has two A records as of 2019-10-14)
 
 server {
 	listen 80;
