Improve snapshot.d.o matching to catch full-hash file lookups too as "essentially indefinitely cacheable"

--- a/http.conf
+++ b/http.conf
@@ -100,7 +100,11 @@ server {
 
 	proxy_next_upstream error timeout http_403 http_404 http_429 http_500 http_502 http_503 http_504;
 
-	location ~ ^/archive/[^/]+/\d\d\d\d\d\d\d\dT\d\d\d\d\d\dZ/ {
+	location ~ '(?x)
+		^ /archive/ [^/]+ / \d\d\d\d\d\d\d\dT\d\d\d\d\d\dZ /
+		|
+		^ /file/ [0-9a-f]{40} $
+	' {
 		proxy_cache_valid 365d;
 
 		proxy_pass http://debian_snapshot;
