--- a/http.conf
+++ b/http.conf
@@ -76,9 +76,9 @@ server {
 # (https://bugs.debian.org/941903)
 # so if we have an upstream with it listed more than once, we can auto-retry on 404
 upstream debian_snapshot {
-	server snapshot-mlm-01.debian.org:80; # TODO https://bugs.debian.org/1072675#15 (drop the first "backup" below)
+	server snapshot-mlm-01.debian.org:80; # https://bugs.debian.org/1072675#15
 	# (listed twice because it has two A records as of 2019-10-14)
-	server snapshot.debian.org:80 backup;
+	#server snapshot.debian.org:80 backup;
 	server snapshot.debian.org:80 backup;
 }
 
@@ -98,7 +98,7 @@ server {
 		return 429 'Squignix Redirecting To Itself\n';
 	}
 
-	proxy_next_upstream error timeout http_403 http_404 http_429 http_500 http_502 http_503 http_504;
+	proxy_next_upstream error timeout http_403 http_429 http_500 http_502 http_503 http_504; # TODO add back http_404 if servers get flaky again
 
 	location ~ '(?x)
 		^ /archive/ [^/]+ / \d\d\d\d\d\d\d\dT\d\d\d\d\d\dZ /
